--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "test"
   },
   "author": "Josh Ghent <me@joshghent.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "vorpal": "^1.12.0"
+  },
+  "devDependencies": {
+    "@types/vorpal": "^1.11.0",
+    "typescript": "^3.0.3"
+  }
 }
